<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_lite"
    tools:context="com.superprofan.mycalc.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/ll_main"
       />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center|end"
        >
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center|right"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#60d"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/referencetext1"
                        android:layout_margin="5.0dp"
                        android:text="@string/ruler_calibration"
                        android:layout_weight="1.0"/>
                    <Button
                        android:layout_gravity="center|right"
                        android:layout_width="45.0dip"
                        android:layout_height="45.0dip"
                        android:layout_margin="10.0dip"
                        android:layout_weight="1.0"
                        android:onClick="calibrations"
                        android:background="@drawable/icon_calibrate"
                        />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/textlight"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/referencetext2"
                    android:layout_margin="5dip"
                    android:text="@string/ruler_reset"
                    android:layout_weight="1.0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:background="@drawable/icon_reset"
                    android:layout_width="45.0dip"
                    android:layout_height="45.0dip"
                    android:layout_margin="1.0dip"
                    android:layout_weight="1.0"
                    android:onClick="reset"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/textlight"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/referencetext3"
                    android:layout_margin="5.0dip"
                    android:text="@string/ruler_type_measure"
                    android:layout_weight="1.0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                    <ToggleButton
                        android:textColor="@color/textlight"
                        android:enabled="true"
                        android:layout_gravity="center"
                        android:id="@+id/typeselect"
                        android:background="@drawable/ruler_type_select"
                        android:checked="false"
                        android:textOn=""
                        android:textOff=""
                        android:text="ToggleButton"
                        android:layout_weight="1.0"
                        android:onClick="typeselection"
                        android:layout_width="45.0dip"
                        android:layout_height="45.0dip"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/referencetext4"
                    android:textColor="@color/textlight"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5.0dip"
                    android:text="@string/ruler_mm_or_inch"
                    android:layout_weight="1.0"/>
                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="45.0dip"
                    android:enabled="true"
                    android:textSize="20.0sp"
                    android:background="@color/transparent"
                    android:textOff="@string/inch"
                    android:checked="false"
                    android:onClick="lengthselection"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/referencetext5"
                    android:textColor="@color/textlight"
                    android:layout_margin="5.0dip"
                    android:text="@string/ruler_block"
                    android:layout_weight="1.0"/>
                <ToggleButton
                    android:layout_width="45.0dip"
                    android:layout_height="45.0dip"
                    android:enabled="true"
                    android:layout_gravity="center"
                    android:id="@+id/blockselect"
                    android:checked="false"
                    android:textOn=""
                    android:textOff=""
                    android:text="@string/togglebutton"
                    android:layout_weight="1.0"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="87.0dip"
            android:layout_toRightOf="@+id/ll_ads"
            android:layout_alignBottom="@+id/ll_ads" />
    </RelativeLayout>
</FrameLayout>
