<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background_dark_lite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextViewHelvLight
        android:textSize="24sp"
        android:textColor="#fff"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/put_a_cm_ruler"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RulerSmall
            android:id="@+id/Ruler_Small"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
  <TextViewHelvLight
    android:textSize="24sp"
    android:textColor="@color/textlight"
    android:gravity="center_horizontal"
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="ВРАЩАЙТЕ БАРАБАН"
      tools:ignore="HardcodedText" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/textlight"
            android:id="@+id/cancel"
            android:background="@drawable/no_dark_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/saveoff"
            android:layout_weight="1"
            android:onClick="cancel"/>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button"
                android:background="@drawable/icon_left"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"/>
            <Button
                android:gravity="center_vertical"
                android:id="@+id/button4"
                android:background="@drawable/icon_right"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <Button
            android:textColor="#fff"
            android:id="@+id/calibrations"
            android:background="@drawable/ok_red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/note_cancel"
            android:layout_weight="1"
            android:onClick="onClick"/>
    </LinearLayout>
    <HorizontalWheelView
        android:layout_gravity="center_horizontal"
        android:id="@+id/horizontalWheelView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        />
</android.support.constraint.ConstraintLayout>